objects/nFORCE__Translation__c.object
<CustomObject>
    <description>This object stores translations for a field on a record in a single language.</description>
    <fields>
        <fullName>nFORCE__Feature_Translation__c</fullName>
        <description>This required external id field is a soft lookup to the Feature Translation.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field should contain the name of the Feature Translation custom metadata type that it is related to.</inlineHelpText>
        <label>Translatable Field</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Language__c</fullName>
        <description>This required field references the language of the translated text.</description>
        <inlineHelpText>Set this to the language that the translated value is in. The format should be ISO 639-1 for the language followed by a dash followed by the ISO Alpha-2 country code. Example: (en-US).</inlineHelpText>
        <label>Language</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Original_Text__c</fullName>
        <description>This optional text field contains the field&apos;s value in the original language.</description>
        <inlineHelpText>This optional text field contains the field&apos;s value in the original language.</inlineHelpText>
        <label>Original Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Translated_Text__c</fullName>
        <description>This optional text field contains the field&apos;s value in the translated language.</description>
        <inlineHelpText>This optional text field contains the field&apos;s value in the translated language.</inlineHelpText>
        <label>Translated Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Translation_Key__c</fullName>
        <description>This field is automatically populated via Apex with a hash to easily match Translation records to the SObject records that the Translation relates to.</description>
        <externalId>true</externalId>
        <label>Translation Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. When importing data into nCino, the field can also be used to efficiently associate related records without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Translation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Translation_Key__c</columns>
        <columns>nFORCE__Language__c</columns>
        <columns>nFORCE__Feature_Translation__c</columns>
        <columns>nFORCE__Original_Text__c</columns>
        <columns>nFORCE__Translated_Text__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Connection_Roles</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Translation_Key__c</columns>
        <columns>nFORCE__Language__c</columns>
        <columns>nFORCE__Feature_Translation__c</columns>
        <columns>nFORCE__Original_Text__c</columns>
        <columns>nFORCE__Translated_Text__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>nFORCE__Feature_Translation__c</field>
            <operation>equals</operation>
            <value>Connection_Role_Names</value>
        </filters>
        <label>Connection Roles</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Field_Configurations</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>NAME</columns>
        <columns>nFORCE__Translation_Key__c</columns>
        <columns>nFORCE__Language__c</columns>
        <columns>nFORCE__Feature_Translation__c</columns>
        <columns>nFORCE__Original_Text__c</columns>
        <columns>nFORCE__Translated_Text__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>nFORCE__Feature_Translation__c</field>
            <operation>equals</operation>
            <value>Field_Configuration_Alternate_Labels</value>
        </filters>
        <filters>
            <field>nFORCE__Feature_Translation__c</field>
            <operation>equals</operation>
            <value>Field_Configuration_Field_Hints</value>
        </filters>
        <filters>
            <field>nFORCE__Feature_Translation__c</field>
            <operation>equals</operation>
            <value>Field_Configuration_Filter_Display_Name</value>
        </filters>
        <filters>
            <field>nFORCE__Feature_Translation__c</field>
            <operation>equals</operation>
            <value>Field_Configuration_Tooltip_Contents</value>
        </filters>
        <filters>
            <field>nFORCE__Feature_Translation__c</field>
            <operation>equals</operation>
            <value>Field_Configuration_Tooltip_Text</value>
        </filters>
        <label>Field Configurations</label>
    </listViews>
    <listViews>
        <fullName>Product_Marketplace</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Translation_Key__c</columns>
        <columns>nFORCE__Language__c</columns>
        <columns>nFORCE__Feature_Translation__c</columns>
        <columns>nFORCE__Original_Text__c</columns>
        <columns>nFORCE__Translated_Text__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>nFORCE__Feature_Translation__c</field>
            <operation>equals</operation>
            <value>Product_Marketing</value>
        </filters>
        <label>Product Marketplace</label>
    </listViews>
    <listViews>
        <fullName>Route_Terms</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>nFORCE__Translation_Key__c</columns>
        <columns>nFORCE__Language__c</columns>
        <columns>nFORCE__Feature_Translation__c</columns>
        <columns>nFORCE__Original_Text__c</columns>
        <columns>nFORCE__Translated_Text__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>nFORCE__Feature_Translation__c</field>
            <operation>equals</operation>
            <value>Route_Terms_Agreement_Text</value>
        </filters>
        <filters>
            <field>nFORCE__Feature_Translation__c</field>
            <operation>equals</operation>
            <value>Route_Terms_Names</value>
        </filters>
        <label>Route Terms</label>
    </listViews>
    <listViews>
        <fullName>Routes</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Translation_Key__c</columns>
        <columns>nFORCE__Language__c</columns>
        <columns>nFORCE__Feature_Translation__c</columns>
        <columns>nFORCE__Original_Text__c</columns>
        <columns>nFORCE__Translated_Text__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>nFORCE__Feature_Translation__c</field>
            <operation>equals</operation>
            <value>Route_Names</value>
        </filters>
        <label>Routes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Screen_Section_Headers</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Translation_Key__c</columns>
        <columns>nFORCE__Language__c</columns>
        <columns>nFORCE__Feature_Translation__c</columns>
        <columns>nFORCE__Original_Text__c</columns>
        <columns>nFORCE__Translated_Text__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>nFORCE__Feature_Translation__c</field>
            <operation>equals</operation>
            <value>Section_Names</value>
        </filters>
        <label>Screen Sections</label>
    </listViews>
    <listViews>
        <fullName>Screen_Sections</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Translation_Key__c</columns>
        <columns>nFORCE__Language__c</columns>
        <columns>nFORCE__Feature_Translation__c</columns>
        <columns>nFORCE__Original_Text__c</columns>
        <columns>nFORCE__Translated_Text__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>nFORCE__Feature_Translation__c</field>
            <operation>equals</operation>
            <value>Screen_Section_Header_Text</value>
        </filters>
        <label>Screen Sections</label>
    </listViews>
    <listViews>
        <fullName>Spanish_Translations</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Translation_Key__c</columns>
        <columns>nFORCE__Language__c</columns>
        <columns>nFORCE__Feature_Translation__c</columns>
        <columns>nFORCE__Original_Text__c</columns>
        <columns>nFORCE__Translated_Text__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>nFORCE__Language__c</field>
            <operation>equals</operation>
            <value>es</value>
        </filters>
        <label>Spanish Translations</label>
    </listViews>
    <nameField>
        <displayFormat>TL-{0000000}</displayFormat>
        <label>Translation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>